# Aura

Aura/: .env.example  .gitignore  README.md  docker-compose.yml
Aura/.github/workflows/: ci-cd.yaml
Aura/docs/: DEPLOYMENT_CHECKLIST.md
Aura/frontend/: Dockerfile  package-lock.json  package.json
Aura/frontend/cypress/e2e/: portfolio.cy.ts
Aura/frontend/src/: App.css  App.tsx  index.css
Aura/frontend/src/api/: alertsApi.ts  authApi.ts  axiosConfig.ts  brokerageApi.ts  index.ts
Aura/frontend/src/components/: AlertRuleForm.tsx  AlertsDisplay.tsx  AlertsList.tsx  MainLayout.tsx  OrderEntryForm.tsx  ProtectedRoute.tsx
Aura/frontend/src/context/: AuthContext.tsx
Aura/frontend/src/pages/: AIPredictionsPage.tsx  AlertsConfigPage.tsx  Dashboard.tsx  Login.tsx  MarketDataPage.tsx  OrderPage.tsx  PortfolioOptimizationPage.tsx  PortfolioPage.tsx  Register.tsx
Aura/infra/: testing-strategy.md
Aura/infra/k8s/: README.md  configmap.yaml
Aura/infra/k8s/brokerage-integration-service/: deployment.yaml  service.yaml
Aura/infra/k8s/monitoring/: prometheus-config.yaml
Aura/infra/monitoring/grafana/: aura-services-dashboard.json
Aura/integration-tests/: test_order_flow.py
Aura/libs/common/: pyproject.toml
Aura/libs/common/aura_common/: __init__.py  service_template.py
Aura/libs/common/aura_common/config/: __init__.py  settings.py
Aura/libs/common/aura_common/database/: __init__.py  influxdb.py  neo4j.py  postgres.py
Aura/libs/common/aura_common/kafka/: __init__.py  consumer.py  producer.py
Aura/libs/common/aura_common/models/: __init__.py  asset.py  market_data.py  user.py
Aura/libs/common/aura_common/utils/: __init__.py  logging.py  security.py  validation.py
Aura/services/ai-modeling-service/: Dockerfile  pyproject.toml
Aura/services/ai-modeling-service/app/: main.py
Aura/services/ai-modeling-service/app/api/: api.py
Aura/services/ai-modeling-service/app/api/endpoints/: predictions.py  status.py  training.py
Aura/services/ai-modeling-service/app/core/: data.py  database.py  models.py
Aura/services/ai-modeling-service/app/schemas/: models.py
Aura/services/alerting-service/: README.md  pyproject.toml
Aura/services/alerting-service/app/: main.py
Aura/services/alerting-service/app/api/: __init__.py  api.py
Aura/services/alerting-service/app/api/endpoints/: rules.py  (+3 more)
Aura/services/alerting-service/app/core/: __init__.py  consumer.py  rule_engine.py  websocket_manager.py
Aura/services/alerting-service/app/db/: __init__.py  base_class.py  session.py
Aura/services/alerting-service/app/models/: __init__.py  alert.py  rule.py
Aura/services/alerting-service/app/schemas/: __init__.py  alert.py  rule.py
Aura/services/api-gateway-service/: README.md  pyproject.toml
Aura/services/api-gateway-service/app/: main.py
Aura/services/api-gateway-service/app/api/: __init__.py  api.py
Aura/services/api-gateway-service/app/api/endpoints/: __init__.py  alerts.py  auth.py  market_data.py  orders.py  portfolio.py  predictions.py  users.py
Aura/services/api-gateway-service/app/api/utils/: __init__.py  proxy.py
Aura/services/api-gateway-service/app/middlewares/: __init__.py  auth.py
Aura/services/auth-service/: Dockerfile  README.md  pyproject.toml
Aura/services/auth-service/app/: main.py
Aura/services/auth-service/app/api/: api.py  models.py
Aura/services/auth-service/app/api/endpoints/: auth.py  users.py
Aura/services/auth-service/app/core/: dependencies.py  user.py
Aura/services/auth-service/app/db/: base_class.py  session.py
Aura/services/auth-service/app/models/: user.py
Aura/services/auth-service/tests/: test_auth.py
Aura/services/brokerage-integration-service/: README.md  pyproject.toml
Aura/services/brokerage-integration-service/app/: main.py
Aura/services/brokerage-integration-service/app/api/: api.py
Aura/services/brokerage-integration-service/app/core/: alpaca_client.py
Aura/services/brokerage-integration-service/app/schemas/: __init__.py  brokerage.py
Aura/services/data-ingestion-service/: Dockerfile  README.md  pyproject.toml
Aura/services/data-ingestion-service/app/: main.py
Aura/services/data-ingestion-service/app/api/: api.py
Aura/services/data-ingestion-service/app/api/endpoints/: market_data.py  news.py  sec.py
Aura/services/data-ingestion-service/app/connectors/: __init__.py  alpaca.py  base.py  newsapi.py  sec.py
Aura/services/data-ingestion-service/app/core/: kafka.py
Aura/services/data-ingestion-service/app/models/: schema.py
Aura/services/data-ingestion-service/tests/: test_market_data.py
Aura/services/data-processing-service/: Dockerfile  pyproject.toml
Aura/services/data-processing-service/app/: main.py
Aura/services/data-processing-service/app/api/: api.py
Aura/services/data-processing-service/app/api/endpoints/: admin.py  status.py
Aura/services/data-processing-service/app/core/: database.py  kafka.py
Aura/services/data-processing-service/app/models/: processed_news.py  processed_sec_filings.py
Aura/services/data-processing-service/app/processors/: market_data_processor.py  news_processor.py  sec_filing_processor.py
Aura/services/personalization-service/: Dockerfile  pyproject.toml
Aura/services/personalization-service/app/: main.py
Aura/services/personalization-service/app/api/: api.py
Aura/services/personalization-service/app/api/endpoints/: interests.py  profiles.py  recommendations.py  status.py
Aura/services/personalization-service/app/core/: database.py
Aura/services/personalization-service/app/models/: user_profile.py
Aura/services/personalization-service/app/schemas/: user_profile.py
Aura/services/portfolio-optimization-service/: Dockerfile  pyproject.toml
Aura/services/portfolio-optimization-service/app/: main.py
Aura/services/portfolio-optimization-service/app/api/: api.py
Aura/services/portfolio-optimization-service/app/api/endpoints/: optimize.py  status.py
Aura/services/portfolio-optimization-service/app/core/: data.py  database.py  optimizer.py
Aura/services/portfolio-optimization-service/app/schemas/: optimization.py
(+3 files in other folders)
