[tool.poetry]
name = "aura-common"
version = "0.1.0"
description = "Common utilities for the Aura platform"
authors = ["Aura Team <info@aura.ai>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"
influxdb-client = "^1.36.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.5"
kafka-python = "^2.0.2"
httpx = "^0.24.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 