[tool.poetry]
name = "ai-modeling-service"
version = "0.1.0"
description = "AI modeling service for Aura platform"
authors = ["Aura Team <team@aura.finance>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
numpy = "^1.26.3"
pandas = "^2.1.4"
influxdb-client = "^1.39.0"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
statsmodels = "^0.14.1"
scikit-learn = "^1.4.0"
transformers = "^4.37.2"
torch = "^2.2.0"
pmdarima = "^2.0.4"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.0"
isort = "^5.13.2"
mypy = "^1.8.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 