[tool.poetry]
name = "api-gateway-service"
version = "0.1.0"
description = "API Gateway Service for Aura Platform"
authors = ["Aura Team <info@aura.finance>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
httpx = "^0.25.0"
python-jose = "^3.3.0"
aura_common = {path = "../../libs/common", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.9.1"
flake8 = "^6.1.0"
mypy = "^1.5.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88 