[tool.poetry]
name = "aura-data-ingestion-service"
version = "0.1.0"
description = "Data ingestion service for the Aura platform"
authors = ["Aura Team <info@aura.ai>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = "^0.23.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
kafka-python = "^2.0.2"
httpx = "^0.24.0"
pandas = "^2.0.0"
pandas-datareader = "^0.10.0"
bs4 = "^0.0.1"
lxml = "^4.9.2"
yfinance = "^0.2.20"
alpaca-trade-api = "^3.0.0"
finnhub-python = "^2.4.18"
newsapi-python = "^0.2.7"
aura-common = {path = "../../libs/common", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 