[tool.poetry]
name = "data-processing-service"
version = "0.1.0"
description = "Data processing service for Aura platform"
authors = ["Aura Team <team@aura.finance>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
pandas = "^2.1.4"
pandas-ta = "^0.3.14b0"
vaderSentiment = "^3.3.2"
influxdb-client = "^1.39.0"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
kafka-python = "^2.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.0"
isort = "^5.13.2"
mypy = "^1.8.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 