[tool.poetry]
name = "portfolio-optimization-service"
version = "0.1.0"
description = "Portfolio optimization service for Aura platform"
authors = ["Aura Team <team@aura.finance>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
numpy = "^1.26.3"
pandas = "^2.1.4"
influxdb-client = "^1.39.0"
PyPortfolioOpt = "^1.5.5"
scipy = "^1.12.0"
matplotlib = "^3.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.0"
isort = "^5.13.2"
mypy = "^1.8.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 